--- a/soundnest-src/src/renderer/TopBar/TopBar.css
+++ b/soundnest-src/src/renderer/TopBar/TopBar.css
@@ -55,22 +55,39 @@
 
 .profileDiv {
   height: 60px;
-  flex: 0 0 240px;
+  flex: 0 0 290px;
   display: inline-flex;
   align-items: center;
+  overflow: visible;
+}
+
+.profileDiv Button:not(.profileButtonDiv Button) {
+  height: 30px;
+  width: 30px;
+  -webkit-app-region: no-drag;
+  background: var(--accent-gradient);
+  color: var(--font-color);
+  border-radius: 10px;
+  box-shadow: 0px 0px 16px -5px var(--font-color);
+}
+
+.profileDiv Button:not(.profileButtonDiv Button):hover {
+  background: var(--accent-gradient-hover);
+  box-shadow: 0px 0px 19px -3px var(--font-color);
 }
 
 .walletValueDiv {
-  flex: 0 0 40px;
+  flex: 0 0 80px;
   display: flex;
   justify-content: center;
 }
 
 .profileButtonDiv {
-  flex: 0 0 50px;
+  flex: 0 0 58px;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
+  margin-left: -5px;
 }
 
 .profileButton {
@@ -188,5 +205,8 @@
   }
   .profileDiv {
     flex: 0 0 180px;
+  }
+  .profileDiv Button:not(.profileButtonDiv Button) {
+    display: none;
   }
 }
